--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {% include head.html %}
+  <head>
+    {% include head.html %}
+  </head>
 
   <body>
 
