--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,3 +7,4 @@
 {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
 {% endif %}
+<title>{{ page.title | escape }}</title>
